--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -1,15 +1,23 @@
-<!DOCTYPE html>
-<HTML lang="en">
-    <HEAD>
-        <TITLE>HBNB</TITLE>
-    </HEAD>
-    <BODY>
-        <H1>States: {{ state.name}}</H1>
-        <H3>Cities:</H3>
-        <ul>
-            {% for city in cities %}
-                <li>{{ city.id }}: <b>{{ city.name }}</b></li>
+{% if not_found %}
+        <H1>Not found!</H1>
+        {% else %}
+            {% if with_id %}
+            {% for state_id, state in states.items() %}
+            <H1>State: {{ state.name }}</H1>
             {% endfor %}
-        </ul>
-    </BODY>
-</HTML>
+            <H3>Cities:</H3>
+            {% else %}
+            <H1>States</H1>
+            {% endif %}
+            <UL>
+                {% for state_id, state in states.items()|sort(attribute='1.name') %}
+                {% if with_id %}
+                {% for city in state.cities|sort(attribute='name') %}
+                <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                {% endfor %}
+                {% else %}
+                <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+                {% endif %}
+                {% endfor %}
+            </UL>
+        {% endif %}
